tests/rspack-test/configCases/errors/wrong-browserslist/errors.js
module.exports = [[/Failed to load browserslist: unknown Node.js version: 32.8.0/]]

